# fln

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CHANGE_LOG.md  CLAUDE_UPDATED.md  CONTRIBUTING.md  Class3_Math_FLN_ExamPaper.html  ER_diagram_db.md  FLN_Worksheet_Generator_All_Levels.html  LEVELS_INDEX.md  OPERATION_FLN.md  README.md  SRS.md  SRS_FLN_v1.2.md  SRS_fln.md  class1_fln_worksheet (1).html  class_2_qp.html  database_design.md  fln_changes_summary.md  fln_specific_level_populator.ipynb  generate_all_question_papers.py  generate_question_paper.py  interactive-math-practice.html  package-lock.json  package.json  product.md  resource.md  run_pipeline.py  schema_design.md
Database/: test.classes.json  test.questions.json  test.schools.json  test.users.json
backend/: .gitignore  (+4 more)
services/model/: .gitignore  MODEL_PIPELINE.md  README.md  pyproject.toml
services/model/app/: __init__.py  main.py
services/model/app/contracts/: full_scan.schema.json  full_scan_request.sample.json  inference.schema.json  sample_request.json  sample_response.json
services/model/app/pipeline/: __init__.py  evaluator.py  preprocess.py  recognition.py  roi.py  scoring.py  templates.py  vision.py
services/model/app/static/: index.html
services/model/samples/: demo-lang-qr.txt  demo-paper-compact-qr.txt  demo-paper-qr.txt  manifest.json
services/model/scripts/: generate_sample_papers.py  install_trocr.ps1  start_trocr_service.ps1
services/model/templates/: demo-lang.json  demo-paper-compact.json  demo-paper.json
services/model/tests/: test_contract.py  test_pipeline.py
(+804 files in other folders)
